# robo_core

./: .gitignore  CMakeLists.txt  README.md
config/: robot_config.cfg
include/config/: configLoader.h
include/logging/: logLevel.h  logger.h
include/sensors/: imu.h  lidar.h  sensor.h  sensorRegistry.h  vec3.h
include/state/: robotState.h  stateManager.h
include/system/: robotSystem.h
src/: app.cpp
src/config/: configLoader.cpp
src/logging/: logger.cpp
src/sensors/: app.cpp  imu.cpp  lidar.cpp  sensorRegistry.cpp
src/state/: stateManager.cpp
src/system/: robotSystem.cpp
